The master page styles were changed

--- a/Structured Cabling Studio/Views/Shared/_Layout.cshtml
+++ b/Structured Cabling Studio/Views/Shared/_Layout.cshtml
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - Structured_Cabling_Studio</title>
+    <title>@ViewData["Title"] - Structured Cabling Studio</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/Structured Cabling Studio.styles.css" asp-append-version="true" />
@@ -13,9 +13,9 @@
 <body>
 
     <header>
-        <nav id="siteNav" class="navbar navbar-light border-bottom box-shadow mb-3">
+        <nav id="siteNav" class="navbar navbar-dark border-bottom box-shadow mb-3">
             <div class="container-fluid">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">Structured Cabling Studio</a>
+                <a id="brandA" class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">Structured Cabling Studio</a>
             </div>
         </nav>
     </header>
@@ -28,7 +28,7 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            Pavel Batsemakin (<a href="https://github.com/Rhoxolan">Rhoxolan</a>) - 2023
+            Pavel Batsemakin (<a href="https://github.com/Rhoxolan">Rhoxolan</a>) &#8211; 2023
         </div>
     </footer>
 
