The bootstrap lib was updated to latest stable v5.2; chenged style of the navbar-brand a

--- a/Structured Cabling Studio/Views/Shared/_Layout.cshtml
+++ b/Structured Cabling Studio/Views/Shared/_Layout.cshtml
@@ -15,7 +15,7 @@
     <header>
         <nav id="siteNav" class="navbar navbar-dark border-bottom box-shadow mb-3">
             <div class="container-fluid">
-                <a class="navbar-brand fs-4" asp-area="" asp-controller="Home" asp-action="Index">Structured Cabling Studio</a>
+                <a class="navbar-brand fs-4 fw-semibold" asp-area="" asp-controller="Home" asp-action="Index">Structured Cabling Studio</a>
             </div>
         </nav>
     </header>
