--- a/Structured Cabling Studio/Views/Shared/_Layout.cshtml
+++ b/Structured Cabling Studio/Views/Shared/_Layout.cshtml
@@ -13,9 +13,27 @@
 <body>
 
     <header>
-        <nav id="siteNav" class="navbar navbar-dark border-bottom box-shadow mb-3">
+        <nav id="siteNav" class="navbar navbar-expand-sm navbar-toggleable-sm navbar-dark border-bottom box-shadow mb-3">
             <div class="container-fluid">
+                
                 <a class="navbar-brand fs-4 fw-semibold" asp-area="" asp-controller="Home" asp-action="Index">Structured Cabling Studio</a>
+
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
+                        aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+
+                <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
+                        <ul class="navbar-nav flex-grow-1 flex-row-reverse">
+                            <li class="nav-item">
+                                text
+                            </li>
+                            <li class="nav-item">
+                                text2
+                            </li>
+                        </ul>
+                </div>
+
             </div>
         </nav>
     </header>
@@ -38,5 +56,4 @@
     @await RenderSectionAsync("Scripts", required: false)
 
 </body>
-
 </html>
