--- a/Structured Cabling Studio/Views/_ViewImports.cshtml
+++ b/Structured Cabling Studio/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using StructuredCablingStudio
 @using StructuredCablingStudio.Models
+@using Microsoft.AspNetCore.Mvc.Localization
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
