--- a/Structured Cabling Studio/Views/Shared/_Layout.cshtml
+++ b/Structured Cabling Studio/Views/Shared/_Layout.cshtml
@@ -24,13 +24,9 @@
 				</button>
 
 				<div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
-					<ul class="navbar-nav flex-grow-1 flex-row-reverse me-2">
+					<ul class="navbar-nav flex-grow-1 flex-row-reverse me-3">
 						<li class="nav-item">
-							
-						</li>
-
-						<li class="nav-item">
-							
+							@await Html.PartialAsync("_SelectLanguagePartial")
 						</li>
 					</ul>
 				</div>
