Work on the localization is ongoing

--- a/Structured Cabling Studio/Views/Shared/_Layout.cshtml
+++ b/Structured Cabling Studio/Views/Shared/_Layout.cshtml
@@ -24,7 +24,7 @@
 				</button>
 
 				<div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
-					<ul class="navbar-nav flex-grow-1 flex-row-reverse me-3">
+					<ul class="navbar-nav text-white flex-grow-1 flex-row-reverse me-4">
 						<li class="nav-item">
 							@await Html.PartialAsync("_SelectLanguagePartial")
 						</li>
