Chenged mater-page and language select page markups

--- a/Structured Cabling Studio/Views/Shared/_Layout.cshtml
+++ b/Structured Cabling Studio/Views/Shared/_Layout.cshtml
@@ -24,7 +24,7 @@
 				</button>
 
 				<div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
-					<ul class="navbar-nav text-white flex-grow-1 flex-row-reverse me-4">
+					<ul class="navbar-nav text-white flex-grow-1 flex-row-reverse me-0 me-sm-1 me-md-2 me-lg-3 me-xl-4 mt-3 mt-sm-0">
 						<li class="nav-item">
 							@await Html.PartialAsync("_SelectLanguagePartial")
 						</li>
