Select Language Partial page was edited

--- a/Structured Cabling Studio/Views/Shared/_SelectLanguagePartial.cshtml.css
+++ b/Structured Cabling Studio/Views/Shared/_SelectLanguagePartial.cshtml.css
@@ -1,7 +1,3 @@
 ﻿#languageSelect {
-    background-color: yellow !important;
+    background-color: #EDF3FF;
 }
-
-/*#EDF3FF*/
-
-/*Не забыть попробовать удалить ссылку сюда*/
