--- a/Structured Cabling Studio/Views/Shared/_SelectLanguagePartial.cshtml
+++ b/Structured Cabling Studio/Views/Shared/_SelectLanguagePartial.cshtml
@@ -11,9 +11,15 @@
 		.ToList();
 }
 
-<link rel="stylesheet" href="~/Structured Cabling Studio.styles.css" asp-append-version="true" />
-
 <form class="d-flex flex-column align-items-center" asp-controller="Localization" asp-action="SetLanguage" method="post" asp-route-returnUrl="@Context.Request.Path">
 	<label class="form-label fs-6 mb-1" for="languageSelect">@Localizer["Language"]</label>
-	<select class="form-select-sm" id="languageSelect" htmlAttributes="new { id = 'languageSelect' }" name="culture" onchange="this.form.submit();" asp-for="@requestCulture!.RequestCulture.UICulture.Name" asp-items="cultureItems"></select>
+	<select class="form-select-sm" id="languageSelect" name="culture" onchange="this.form.submit();">
+		@foreach (var item in cultureItems)
+		{
+			<option value="@item.Value" selected="@((item.Value == requestCulture?.RequestCulture.UICulture.Name) ? "selected" : null)">
+				@item.Text
+			</option>
+		}
+	</select>
+
 </form>
