--- a/Structured Cabling Studio/Views/Shared/_Layout.cshtml
+++ b/Structured Cabling Studio/Views/Shared/_Layout.cshtml
@@ -13,7 +13,7 @@
 <body>
 
 	<header>
-		<nav id="siteNav" class="navbar navbar-expand-sm navbar-toggleable-sm navbar-dark border-bottom box-shadow mb-3">
+		<nav id="siteNav" class="navbar navbar-expand-sm navbar-toggleable-sm navbar-dark border-dark border-opacity-10 border-bottom box-shadow">
 			<div class="container-fluid">
 
 				<a class="navbar-brand fs-4 fw-semibold" asp-area="" asp-controller="Home" asp-action="Index">Structured Cabling Studio</a>
@@ -35,13 +35,30 @@
 		</nav>
 	</header>
 
-	<div class="container">
-		<main role="main" class="pb-3">
-			@RenderBody()
-		</main>
+	<div class="container-fluid d-flex ps-0">
+
+		<nav id="verticalSiteNav" class="navbar navbar-expand-sm navbar-light">
+			<div class="navbar-collapse collapse">
+				<ul class="nav flex-column">
+					<li class="nav-item">
+						<a class="nav-link" href="#">Link</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="#">Link</a>
+					</li>
+				</ul>
+			</div>
+		</nav>
+
+		<div class="container mt-3">
+			<main role="main" class="pb-3">
+				@RenderBody()
+			</main>
+		</div>
+
 	</div>
 
-	<footer class="border-top footer text-muted">
+	<footer class="border-top footer fixed-bottom text-muted text-nowrap">
 		<div class="container">
 			Pavel Batsemakin (<a href="https://github.com/Rhoxolan">Rhoxolan</a>) &#8211; 2023
 		</div>
