--- a/Structured Cabling Studio/Views/Shared/_Layout.cshtml.css
+++ b/Structured Cabling Studio/Views/Shared/_Layout.cshtml.css
@@ -1,20 +1,20 @@
 ﻿a {
-  color: #0077cc;
+    color: #0077cc;
 }
 
 .box-shadow {
-  box-shadow: 0 .25rem .75rem rgba(0, 0, 0, .05);
+    box-shadow: 0 .25rem .75rem rgba(0, 0, 0, .05);
 }
 
 .footer {
-  position: absolute;
-  bottom: 0;
-  width: 100%;
-  white-space: nowrap;
-  line-height: 60px;
+    line-height: 60px;
 }
 
 #siteNav {
     background-color: #81A8FF;
     font-family: 'Neue Haas Grotesk Text Pro', sans-serif;
+}
+
+#verticalSiteNav {
+    background-color: #C0DCFF;
 }
