--- a/Structured Cabling Studio/Views/Shared/_Layout.cshtml.css
+++ b/Structured Cabling Studio/Views/Shared/_Layout.cshtml.css
@@ -7,6 +7,7 @@
 }
 
 .footer {
+    bottom: 0;
     line-height: 60px;
 }
 
@@ -16,5 +17,9 @@
 }
 
 #verticalSiteNav {
-    background-color: #C0DCFF;
+    background-color: #AAC5FF;
+}
+
+#verticalSiteNavbarUl{
+    width: 100px;
 }
