The master page markup was changed

--- a/Structured Cabling Studio/Views/Shared/_Layout.cshtml.css
+++ b/Structured Cabling Studio/Views/Shared/_Layout.cshtml.css
@@ -17,9 +17,9 @@
 }
 
 #verticalSiteNav {
-    background-color: #AAC5FF;
+    background-color: #9CB9FC;
 }
 
-#verticalSiteNavbarUl{
+#verticalSiteNavbarUl {
     width: 100px;
 }
