--- a/Structured Cabling Studio/Views/Shared/_Layout.cshtml
+++ b/Structured Cabling Studio/Views/Shared/_Layout.cshtml
@@ -41,11 +41,11 @@
 		</nav>
 	</header>
 
-	<div class="container-fluid d-flex ps-0">
+	<div id="siteContentDiv" class="container-fluid d-flex ps-0">
 
 		<nav id="verticalSiteNav" class="navbar navbar-expand-sm navbar-dark align-items-start">
 			<div id="verticalSiteNavbarDiv" class="navbar-collapse collapse">
-				<ul id="verticalSiteNavbarUl" class="navbar-nav flex-column ms-3 me-1">
+				<ul id="verticalSiteNavbarUl" class="navbar-nav flex-column ms-3 me-2">
 					<li class="nav-item">
 						<a class="nav-link text-white fw-semibold fs-5" href="#">Link</a>
 					</li>
