--- a/Structured Cabling Studio/Views/Shared/_Layout.cshtml
+++ b/Structured Cabling Studio/Views/Shared/_Layout.cshtml
@@ -43,7 +43,7 @@
 
 	<div id="siteContentDiv" class="container-fluid d-flex ps-0">
 
-		<nav id="verticalSiteNav" class="siteContent navbar navbar-expand-sm navbar-dark align-items-start">
+		<nav id="verticalSiteNav" class="verticalSiteContent navbar navbar-expand-sm navbar-dark align-items-start">
 			<div id="verticalSiteNavbarDiv" class="navbar-collapse collapse">
 				<ul id="verticalSiteNavbarUl" class="navbar-nav flex-column ms-3 me-3">
 					<li class="nav-item">
