The master page markup was changed

--- a/Structured Cabling Studio/Views/Shared/_Layout.cshtml
+++ b/Structured Cabling Studio/Views/Shared/_Layout.cshtml
@@ -33,11 +33,11 @@
 
 				<div id="siteNavbarDiv" class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
 					<ul class="navbar-nav text-white flex-grow-1 flex-row-reverse me-0 me-sm-1 me-md-2 me-lg-3 me-xl-4 mt-3 mt-sm-0 mb-1">
-						<li class="nav-item">
+						<li class="siteNavbarLi nav-item">
 							@await Html.PartialAsync("_SelectLanguagePartial")
 						</li>
-						<li class="nav-item text-wrap">
-							<a class="nav-link text-white fw-semibold fs-5" href="#">
+						<li class="siteNavbarLi nav-item text-center d-flex justify-content-center align-items-center">
+							<a class="nav-link text-white fw-semibold me-2 pb-0 pt-0 fs-6" href="#">
 								@Localizer["Project information"]
 							</a>
 						</li>
