Removed unused selectors and attributes from master-page layout

--- a/Structured Cabling Studio/Views/Shared/_Layout.cshtml
+++ b/Structured Cabling Studio/Views/Shared/_Layout.cshtml
@@ -24,7 +24,7 @@
 					<span class="navbar-toggler-icon"></span>
 				</button>
 
-				<a class="navbar-brand fs-4 fw-semibold" asp-area="" asp-controller="Home" asp-action="Index">Structured Cabling Studio</a>
+				<a class="navbar-brand fs-4 fw-semibold" asp-action="Index">Structured Cabling Studio</a>
 
 				<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#siteNavbarDiv" aria-controls="navbarSupportedContent"
 						aria-expanded="false" aria-label="Toggle navigation">
@@ -48,11 +48,11 @@
 		</nav>
 	</header>
 
-	<div id="siteContentDiv" class="container-fluid d-flex ps-0">
+	<div class="container-fluid d-flex ps-0">
 
-		<nav id="verticalSiteNav" class="verticalSiteContent navbar navbar-expand-sm navbar-dark align-items-start">
+		<nav id="verticalSiteNav" class="verticalSiteContent navbar navbar-expand-sm align-items-start">
 			<div id="verticalSiteNavbarDiv" class="navbar-collapse collapse">
-				<ul id="verticalSiteNavbarUl" class="navbar-nav flex-column ms-3 me-3">
+				<ul class="navbar-nav flex-column ms-3 me-3">
 					<li class="nav-item">
 						<a class="nav-link text-white fw-semibold fs-5" href="#">
 							@Localizer["Calculation"]
