--- a/Structured Cabling Studio/Views/Shared/_Layout.cshtml
+++ b/Structured Cabling Studio/Views/Shared/_Layout.cshtml
@@ -54,18 +54,18 @@
 
 		<nav id="verticalSiteNav" class="verticalSiteContent navbar navbar-expand-sm align-items-start">
 			<div id="verticalSiteNavbarDiv" class="navbar-collapse collapse">
-				<ul class="navbar-nav flex-column ms-3 me-3">
-					<li class="nav-item">
+				<ul class="navbar-nav flex-column">
+					<li class="nav-item p-1 ps-3 pe-3">
 						<a class="nav-link text-white fw-semibold fs-5" href="#">
 							@Localizer["Calculation"]
 						</a>
 					</li>
-					<li class="nav-item">
+					<li class="nav-item p-1 ps-3 pe-3">
 						<a class="nav-link text-white fw-semibold fs-5" href="#">
 							@Localizer["History"]
 						</a>
 					</li>
-					<li class="nav-item">
+					<li class="nav-item p-1 ps-3 pe-3">
 						<a class="nav-link text-white fw-semibold fs-5" href="#">
 							@Localizer["Information"]
 						</a>
