Edited the layout page styles

--- a/Structured Cabling Studio/Views/Shared/_Layout.cshtml
+++ b/Structured Cabling Studio/Views/Shared/_Layout.cshtml
@@ -52,20 +52,20 @@
 
 	<div class="container-fluid d-flex ps-0">
 
-		<nav id="verticalSiteNav" class="verticalSiteContent navbar navbar-expand-sm align-items-start">
+		<nav id="verticalSiteNav" class="verticalSiteContent navbar navbar-expand-sm align-items-start p-0">
 			<div id="verticalSiteNavbarDiv" class="navbar-collapse collapse">
 				<ul class="navbar-nav flex-column">
-					<li class="nav-item p-1 ps-3 pe-3">
+					<li class="verticalSiteNavbarLi nav-item p-1 ps-3 pe-3">
 						<a class="nav-link text-white fw-semibold fs-5" href="#">
 							@Localizer["Calculation"]
 						</a>
 					</li>
-					<li class="nav-item p-1 ps-3 pe-3">
+					<li class="verticalSiteNavbarLi nav-item p-1 ps-3 pe-3">
 						<a class="nav-link text-white fw-semibold fs-5" href="#">
 							@Localizer["History"]
 						</a>
 					</li>
-					<li class="nav-item p-1 ps-3 pe-3">
+					<li class="verticalSiteNavbarLi nav-item p-1 ps-3 pe-3">
 						<a class="nav-link text-white fw-semibold fs-5" href="#">
 							@Localizer["Information"]
 						</a>
