Edited layout page styles

--- a/Structured Cabling Studio/Views/Shared/_Layout.cshtml.css
+++ b/Structured Cabling Studio/Views/Shared/_Layout.cshtml.css
@@ -31,6 +31,6 @@
 }
 
 .verticalSiteNavbarLi:active {
-    background-color: #87ADFA;
+    background-color: #87ADFF;
     transition: background-color 0s;
 }
