Nav-panel and select-language styles were changed

--- a/Structured Cabling Studio/Views/Shared/_Layout.cshtml
+++ b/Structured Cabling Studio/Views/Shared/_Layout.cshtml
@@ -39,7 +39,7 @@
 							</div>
 						</li>
 						<li class="siteNavbarLi nav-item">
-							<a class="nav-link text-white text-center fw-semibold fs-6" href="#">
+							<a class="nav-link text-white text-center fw-semibold" href="#">
 								@Localizer["Project information"]
 							</a>
 						</li>
