--- a/Structured Cabling Studio/Views/_ViewImports.cshtml
+++ b/Structured Cabling Studio/Views/_ViewImports.cshtml
@@ -1,4 +1,5 @@
 ﻿@using StructuredCablingStudio
 @using StructuredCablingStudio.Models
-@using Microsoft.AspNetCore.Mvc.Localization
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+
+@inject Microsoft.AspNetCore.Mvc.Localization.IViewLocalizer Localizer
