--- a/Structured Cabling Studio/Views/_ViewImports.cshtml
+++ b/Structured Cabling Studio/Views/_ViewImports.cshtml
@@ -1,5 +1,2 @@
-﻿@using StructuredCablingStudio
-@using StructuredCablingStudio.Models
-@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
-
+﻿@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @inject Microsoft.AspNetCore.Mvc.Localization.IViewLocalizer Localizer
