--- a/Structured Cabling Studio/Views/Shared/_Layout.cshtml
+++ b/Structured Cabling Studio/Views/Shared/_Layout.cshtml
@@ -22,7 +22,7 @@
 					<span class="navbar-toggler-icon"></span>
 				</button>
 
-				<a class="navbar-brand fs-4 fw-semibold" asp-action="Index">Structured Cabling Studio</a>
+				<a class="navbar-brand fs-4 fw-semibold" asp-controller="Home" asp-action="Index">Structured Cabling Studio</a>
 
 				<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#siteNavbarDiv" aria-controls="navbarSupportedContent"
 						aria-expanded="false" aria-label="Toggle navigation">
