--- a/Structured Cabling Studio/Views/_ViewImports.cshtml
+++ b/Structured Cabling Studio/Views/_ViewImports.cshtml
@@ -1,2 +1,3 @@
-﻿@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+﻿@using StructuredCablingStudio.Controllers
+@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @inject Microsoft.AspNetCore.Mvc.Localization.IViewLocalizer Localizer
