Edited the Account controller; some work changes to layout page styles

--- a/Structured Cabling Studio/Views/Shared/_Layout.cshtml
+++ b/Structured Cabling Studio/Views/Shared/_Layout.cshtml
@@ -41,7 +41,7 @@
 								@Localizer["Project information"]
 							</a>
 						</li>
-						<li class="siteNavbarLi nav-item ms-2 me-1">
+						<li class="siteNavbarLiLogin nav-item ms-2 me-1">
 							@await Html.PartialAsync("_SignInWithGooglePartial")
 						</li>
 					</ul>
