Working changes to layout styles

--- a/Structured Cabling Studio/Views/Shared/_SignInWithGooglePartial.cshtml
+++ b/Structured Cabling Studio/Views/Shared/_SignInWithGooglePartial.cshtml
@@ -9,13 +9,14 @@
 				@User.Identity.Name
 			</a>
 			<a asp-controller="@nameof(Calculation)" asp-action="@nameof(Calculation.History)" class="eMailNavDisplay nav-link text-decoration-underline text-white">
-				consequatorisusocongueoatoDonecoornareomattisomorbio
+				31-rxdyqmkumnaufvyvqipogpjiukzу
 			</a>
 			<a asp-controller="@nameof(Calculation)" asp-action="@nameof(Calculation.History)" class="eMailNavDisplay nav-link text-decoration-underline text-white">
-				oProinoaoconsecteturoerosooDonecoaliquamomollisoorciooutoconsequatorisusocongueoatoDonecoornareomattisomorbio
+				63-sgdcqsmqehmasibojawlhbagewpecqymgdiemflrsjayenidwtduwvxezgla
 			</a>
 			<a asp-controller="@nameof(Calculation)" asp-action="@nameof(Calculation.History)" class="eMailNavDisplay nav-link text-decoration-underline text-white">
-				Loremoipsumodolorositoamet,oconsecteturoadipiscingoelitoMaurisobibendumoosodalesooorciooutosollicitudinoNullamovehiculaonuncoegetorutrumoaccumsan.oProinoaoconsecteturoerosooDonecoaliquamomollisoorciooutoconsequatorisusocongueoatoDonecoornareomattisomorbio
+				255-jhtuatwfatvfaaignjizvbsijiqpwbzzdcgstciaiypamysvrcjxpaxbqcpyvoludodsidsrsqwnzqskoefhzldbcytxmqkufjwdjrykmgbjgavmkjvsrdfxnmpcpvsvadvihvbsuhjciupopxpsqxfmudkdirdupfbjnyamnsyvzucrpcbitycotsvqunchuqeuwqrvtziwhdkgqrkmpzpipbscnltujmutlsqgbghpxvbzxegxjrzpvsg
+
 			</a>
 		</div>
 		<form asp-controller="@nameof(Account)" asp-action="@nameof(Account.Logout)" method="post">
