Working changes to layout styles

--- a/Structured Cabling Studio/Views/Shared/_SignInWithGooglePartial.cshtml
+++ b/Structured Cabling Studio/Views/Shared/_SignInWithGooglePartial.cshtml
@@ -15,8 +15,10 @@
 				63-sgdcqsmqehmasibojawlhbagewpecqymgdiemflrsjayenidwtduwvxezgla
 			</a>
 			<a asp-controller="@nameof(Calculation)" asp-action="@nameof(Calculation.History)" class="eMailNavDisplay nav-link text-decoration-underline text-white">
-				255-jhtuatwfatvfaaignjizvbsijiqpwbzzdcgstciaiypamysvrcjxpaxbqcpyvoludodsidsrsqwnzqskoefhzldbcytxmqkufjwdjrykmgbjgavmkjvsrdfxnmpcpvsvadvihvbsuhjciupopxpsqxfmudkdirdupfbjnyamnsyvzucrpcbitycotsvqunchuqeuwqrvtziwhdkgqrkmpzpipbscnltujmutlsqgbghpxvbzxegxjrzpvsg
-
+				127loudpojubxtxdmiusnkuqieszgictkhmvydtrodhxzkbvbvvlqcmloeswwcvapjgidggjbwtlsfvukqplsaizvivqciqkhplnkylyrqzsllybsxealuhhewtltmy
+			</a>
+			<a asp-controller="@nameof(Calculation)" asp-action="@nameof(Calculation.History)" class="eMailNavDisplay nav-link text-decoration-underline text-white">
+				255tjhtuatwfatvfaaignjizvbsijiqpwbzzdcgstciaiypamysvrcjxpaxbqcpyvoludodsidsrsqwnzqskoefhzldbcytxmqkufjwdjrykmgbjgavmkjvsrdfxnmpcpvsvadvihvbsuhjciupopxpsqxfmudkdirdupfbjnyamnsyvzucrpcbitycotsvqunchuqeuwqrvtziwhdkgqrkmpzpipbscnltujmutlsqgbghpxvbzxegxjrzpvsg
 			</a>
 		</div>
 		<form asp-controller="@nameof(Account)" asp-action="@nameof(Account.Logout)" method="post">
