--- a/Structured Cabling Studio/Views/Shared/_Layout.cshtml
+++ b/Structured Cabling Studio/Views/Shared/_Layout.cshtml
@@ -13,7 +13,7 @@
 <body>
 
 	<header>
-		<nav id="siteNav" class="navbar navbar-expand-sm navbar-toggleable-sm navbar-dark border-dark border-opacity-10 border-bottom box-shadow p-0">
+		<nav id="siteNav" class="navbar navbar-expand-lg navbar-toggleable-lg navbar-dark border-dark border-opacity-10 border-bottom box-shadow p-0">
 
 			<div class="container-fluid">
 
@@ -29,19 +29,19 @@
 					<span class="navbar-toggler-icon"></span>
 				</button>
 
-				<div id="siteNavbarDiv" class="navbar-collapse collapse d-sm-inline-flex me-0 me-sm-1 me-md-2 me-lg-3">
+				<div id="siteNavbarDiv" class="navbar-collapse collapse d-lg-inline-flex me-0 me-sm-1 me-md-2 me-lg-3">
 					<ul class="align-items-center navbar-nav flex-grow-1 flex-row-reverse">
-						<li class="siteNavbarLi nav-item ms-1 me-1">
+						<li class="siteNavbarLi nav-item ms-2 me-1">
 							<div class="nav-link text-white">
 								@await Html.PartialAsync("_SelectLanguagePartial")
 							</div>
 						</li>
-						<li class="siteNavbarLi nav-item ms-1 me-1">
+						<li class="siteNavbarLi nav-item ms-2 me-1">
 							<a class="nav-link text-white text-center fw-semibold" href="#">
 								@Localizer["Project information"]
 							</a>
 						</li>
-						<li class="siteNavbarLiLogin nav-item ms-1 me-1">
+						<li class="nav-item ms-2 me-1">
 							@await Html.PartialAsync("_SignInWithGooglePartial")
 						</li>
 					</ul>
@@ -53,7 +53,7 @@
 
 	<div class="container-fluid d-flex ps-0">
 
-		<nav id="verticalSiteNav" class="verticalSiteContent navbar navbar-expand-sm align-items-start p-0">
+		<nav id="verticalSiteNav" class="verticalSiteContent navbar navbar-expand-lg align-items-start p-0">
 			<div id="verticalSiteNavbarDiv" class="navbar-collapse collapse">
 				<ul class="navbar-nav flex-column">
 					<li class="verticalSiteNavbarLi nav-item p-1 ps-3 pe-3">
