--- a/Structured Cabling Studio/Views/Calculation/History.cshtml
+++ b/Structured Cabling Studio/Views/Calculation/History.cshtml
@@ -7,9 +7,11 @@
 	<h4>
 		@Localizer["Signin with Google to watch history"]
 	</h4>
-	<a asp-controller="@nameof(Account)" asp-action="@nameof(Account.SignInWithGoogle)" class="btn btn-outline-primary mt-3">
-		@Localizer["Sign In with Google"]
-	</a>
+	<form asp-controller="@nameof(Account)" asp-action="@nameof(Account.SignInWithGoogle)" method="post" class="mt-3">
+		<button type="submit" class="btn btn-outline-primary">
+			@Localizer["Sign In with Google"]
+		</button>
+	</form>
 }
 else
 {
