Added link on the Layout to the Information action from Calculation controller

--- a/Structured Cabling Studio/Views/Shared/_Layout.cshtml
+++ b/Structured Cabling Studio/Views/Shared/_Layout.cshtml
@@ -67,7 +67,7 @@
 						</a>
 					</li>
 					<li class="verticalSiteNavbarLi nav-item p-1 ps-3 pe-3">
-						<a class="nav-link text-white fw-semibold fs-5" href="#">
+						<a asp-controller="@nameof(Calculation)" asp-action="@nameof(Calculation.Information)" class="nav-link text-white fw-semibold fs-5">
 							@Localizer["Information"]
 						</a>
 					</li>
